# aezakmi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 67c6ae37d789_init.py
app/: main.py  tasks.py
app/api/v1/endpoints/: notifications.py
app/core/: celery_app.py  config.py  redis.py
app/db/: session.py
app/db/models/: notification.py
app/schemas/: notification.py
app/services/: ai_analyzer.py  notification_service.py
tests/: conftest.py  test_api.py  test_services.py
